axion-ingestion-service/Manifest/ingestionservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service-pod
spec:
  selector:
    app: ingestion-pod
  ports:
  - port: 80
    targetPort: 8000
  type :  ClusterIP
